force-app/main/default/objects/EmailToCaseDiscardedMailID__mdt/EmailToCaseDiscardedMailID__mdt.object-meta.xml
<CustomObject>
    <label>EmailToCase Discarded Mail ID</label>
    <pluralLabel>EmailToCase Discarded Mail IDs</pluralLabel>
</CustomObject>