force-app/main/default/objects/EmailToCaseDiscardedMailID__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <defaultValue>&quot;Others&quot;</defaultValue>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Others</fullName>
                <default>true</default>
                <label>Others</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>