force-app/main/default/objects/EmailToCaseDiscardedMailID__mdt/fields/Email_IDs__c.field-meta.xml
<CustomField>
    <fullName>Email_IDs__c</fullName>
    <label>Email IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>