force-app/main/default/objects/EmailToCaseDiscardedMailID__mdt/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketing Mails</fullName>
                <default>true</default>
                <label>Marketing Mails</label>
            </value>
            <value>
                <fullName>DO Mails</fullName>
            </value>
            <value>
                <fullName>Bounced Mails</fullName>
            </value>
            <value>
                <fullName>Social Media Mails</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>