force-app/main/default/objects/EmailToCaseDiscardedMailID__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>&quot;Query&quot;</defaultValue>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Query</fullName>
                <default>true</default>
                <label>Query</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>